fix visibility issue for toolbar collapse in shopbuilder

--- a/resources/scss/ceres/common/_common.scss
+++ b/resources/scss/ceres/common/_common.scss
@@ -2,6 +2,12 @@ body .wrapper-main{
     overflow-x: hidden;
 }
 
+.sb-no-animation.collapsing {
+    -webkit-transition: none !important;
+    transition: none !important;
+    display: none !important;
+}
+
 .hidden {
     display: none;
 }
